man-lap/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 0.0.0.0/0 any 158.36.68.72 in
-A ufw-user-input -p tcp --dport 22 -s 158.36.68.72 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 158.36.161.227 in
-A ufw-user-input -p tcp --dport 22 -s 158.36.161.227 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 84.20.99.113 in
-A ufw-user-input -s 84.20.99.113 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 158.36.68.93 in
-A ufw-user-input -s 158.36.68.93 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 158.36.68.72 in
-A ufw-user-input -s 158.36.68.72 -j ACCEPT

### tuple ### allow tcp 10050 0.0.0.0/0 any 158.36.68.71 in
-A ufw-user-input -p tcp --dport 10050 -s 158.36.68.71 -j ACCEPT

### tuple ### allow tcp 10051 0.0.0.0/0 any 158.36.68.71 in
-A ufw-user-input -p tcp --dport 10051 -s 158.36.68.71 -j ACCEPT

### tuple ### allow tcp 10050 0.0.0.0/0 any 158.36.68.70 in
-A ufw-user-input -p tcp --dport 10050 -s 158.36.68.70 -j ACCEPT

### tuple ### allow tcp 10051 0.0.0.0/0 any 158.36.68.70 in
-A ufw-user-input -p tcp --dport 10051 -s 158.36.68.70 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 158.36.0.0/24 in
-A ufw-user-input -p tcp --dport 22 -s 158.36.0.0/24 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 158.36.161.0/24 in
-A ufw-user-input -p tcp --dport 22 -s 158.36.161.0/24 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 10.254.3.0/24 in
-A ufw-user-input -p tcp --dport 22 -s 10.254.3.0/24 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 10.254.0.0/24 in
-A ufw-user-input -p tcp --dport 22 -s 10.254.0.0/24 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 158.36.78.33 in
-A ufw-user-input -p tcp --dport 22 -s 158.36.78.33 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 193.75.59.172 in
-A ufw-user-input -p tcp --dport 22 -s 193.75.59.172 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 158.36.78.0/24 in
-A ufw-user-input -p tcp --dport 22 -s 158.36.78.0/24 -j ACCEPT

### tuple ### allow udp 51238 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 51238 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 10.38.7.121 in
-A ufw-user-input -p tcp --dport 22 -s 10.38.7.121 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 10.238.7.121 in
-A ufw-user-input -p tcp --dport 22 -s 10.238.7.121 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
